--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,11 @@
+click==8.1.3
+Flask==2.1.2
+Flask-WTF==1.0.1
 gunicorn==20.1.0
+itsdangerous==2.1.2
+Jinja2==3.1.2
+MarkupSafe==2.1.1
+python-dateutil==2.8.2
+six==1.16.0
+Werkzeug==2.1.2
+WTForms==3.0.1
